# usbipdcpp

./: CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build-packages.yml  cmake-multi-platform.yml  release.yml
bindings/: CMakeLists.txt  device.cpp  endpoint.cpp  enums.cpp  module.cpp  virtual_device.cpp
bindings/devices/: absolute_mouse.cpp
examples/: CMakeLists.txt  example_utils.h
examples/absolute_mouse/: absolute_mouse_main.cpp
examples/libevdev_mouse/: Mouse.cpp  libevdev_mouse.cpp  libevdev_mouse.h  libevdev_mouse_main.cpp
examples/libusb_server/: libusb_server.cpp
examples/mock_cdc_acm/: mock_cdc_acm.cpp  mock_cdc_acm.h  mock_cdc_acm_main.cpp
examples/mock_gamepad/: mock_gamepad_main.cpp
examples/mock_keyboard/: mock_keyboard_main.cpp
examples/mock_uvc/: mock_uvc_main.cpp
examples/mock_uvc_ffmpeg/: FfmpegSource.cpp  FfmpegSource.h
examples/multi_devices/: device_factory.cpp  device_factory.h  multi_devices_main.cpp  simple_device.cpp  simple_device.h
examples/multi_interface_hid/: multi_interface_hid_main.cpp
examples/python/: flip_left_button.py  test_absolute_mouse.py
examples/termux_libusb_server/: termux_libusb_server.cpp
include/: Device.h  Endpoint.h  Interface.h  Server.h  Session.h  SetupPacket.h  network.h  protocol.h  usbipdcpp_core.h  usbipdcpp_libusb.h  usbipdcpp_virtual_device.h
include/DeviceHandler/: DeviceHandler.h  TransferOperator.h
include/InterfaceHandler/: InterfaceHandler.h
include/LibusbHandler/: LibusbDeviceHandler.h  LibusbServer.h  LibusbTransferOperator.h  tools.h
include/utils/: LatencyTracker.h  ObjectPool.h  ReuseMap.h  ReuseSet.h  RingBuffer.h  SmallVector.h  StringPool.h
include/virtual_device/: CdcAcmConstants.h  CdcAcmVirtualInterfaceHandler.h  HidConstants.h  HidVirtualInterfaceHandler.h  MscConstants.h  UvcConstants.h  UvcVirtualInterfaceHandler.h  VirtualDeviceHandler.h  VirtualDeviceTransferOperator.h  VirtualInterfaceHandler.h
include/virtual_device/devices/: AbsoluteMouseHandler.h  DigitizerHandler.h  GamepadHandler.h  KeyboardHandler.h  MscBulkOnlyHandler.h  RelativeMouseHandler.h
include/virtual_device/storage_backends/: MemoryBackend.h  RawImageBackend.h  StorageBackend.h  StorageIoTransfer.h  StorageTransferOperator.h
include/virtual_device/video_sources/: ColorBarSource.h  VideoSource.h
src/: Device.cpp  Server.cpp  Session.cpp  protocol.cpp
src/DeviceHandler/: GenericTransferOperator.cpp
src/LibusbHandler/: LibusbDeviceHandler.cpp  LibusbServer.cpp  LibusbTransferOperator.cpp
src/utils/: RingBuffer.cpp
src/virtual_device/: CdcAcmVirtualInterfaceHandler.cpp  HidVirtualInterfaceHandler.cpp  SimpleVirtualDeviceHandler.cpp  UvcVirtualInterfaceHandler.cpp  VirtualDeviceHandler.cpp  VirtualDeviceTransferOperator.cpp  VirtualInterfaceHandler.cpp
src/virtual_device/devices/: AbsoluteMouseHandler.cpp  DigitizerHandler.cpp  GamepadHandler.cpp  KeyboardHandler.cpp  MscBulkOnlyHandler.cpp  RelativeMouseHandler.cpp
src/virtual_device/storage_backends/: RawImageBackend.cpp  StorageTransferOperator.cpp
src/virtual_device/video_sources/: ColorBarSource.cpp
tests/: test_generic_transfer.cpp  test_object_pool.cpp  test_reuse_map.cpp  test_reuse_set.cpp  test_setup_packet.cpp  test_small_vector.cpp  test_stringpool.cpp  test_transfer_handle.cpp  test_usb_device.cpp  test_usbip_response.cpp  test_utils.h
tests/test_protocol/: test_protocol.cpp  test_protocol_compatibility.cpp
tools/overlayroot/: disable.sh  enable.sh  remount-rw.sh
tools/windows/: README.md  UsbIpAutoService.cs
